# file-manager

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md  VERSION_1.0.1_CHANGELOG.md  build-deb.sh  办公文件显示修改说明.md  多视图功能添加说明.md  项目分析报告.md
debian/: changelog  control  copyright  file-manager-preview.desktop  install  rules
resources/: resources.qrc
src/: ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  MediaViewer.cpp  MediaViewer.h  OfficeConverter.cpp  OfficeConverter.h  OfficeWebViewer.cpp  OfficeWebViewer.h  PdfSimpleViewer.cpp  PdfSimpleViewer.h  PdfViewer.cpp  PdfViewer.h  TextPreviewer.cpp  TextPreviewer.h  main.cpp
